--- a/manimator-nextjs/package.json
+++ b/manimator-nextjs/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.4.7",
     "next": "13.x",
+    "pnpm": "^10.5.0",
     "react": "~18.3.1",
     "react-dom": "18.x",
     "socket.io-client": "^4.x"
